--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Modelo</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Renderizei até aqui</h1>
+
+<div class="bgprimary">
+    <section class="container">
+        <h1>Webpack Boilerplate</h1>
+
+    <script src="./assets/js/bundle.js"></script>
 </body>
+
 </html>
