--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,6 +13,11 @@
 <div class="bgprimary">
     <section class="container">
         <h1>Webpack Boilerplate</h1>
+        <form action="/formulario" method="post">
+            <label>Nome:</label>
+            <input type="text" name="cliente">
+            <button>Submit</button>
+        </form>
 
     <script src="./assets/js/bundle.js"></script>
 </body>
